syntax = "proto3";

import "zitadel/object.proto";
import "validate/validate.proto";
import "google/protobuf/duration.proto";

package zitadel.settings.v1;

option go_package ="github.com/dennigogo/zitadel/pkg/grpc/settings";

message SecretGenerator {
  SecretGeneratorType generator_type = 1;
  zitadel.v1.ObjectDetails details = 2;
  uint32 length = 3;
  google.protobuf.Duration  expiry   = 4;
  bool include_lower_letters = 5;
  bool include_upper_letters = 6;
  bool include_digits = 7;
  bool include_symbols = 8;
}

message SecretGeneratorQuery {
  oneof query {
    option (validate.required) = true;

    SecretGeneratorTypeQuery type_query = 1;
  }
}

message SecretGeneratorTypeQuery {
  SecretGeneratorType generator_type = 1;
}

enum SecretGeneratorType {
  SECRET_GENERATOR_TYPE_UNSPECIFIED = 0;
  SECRET_GENERATOR_TYPE_INIT_CODE = 1;
  SECRET_GENERATOR_TYPE_VERIFY_EMAIL_CODE = 2;
  SECRET_GENERATOR_TYPE_VERIFY_PHONE_CODE = 3;
  SECRET_GENERATOR_TYPE_PASSWORD_RESET_CODE = 4;
  SECRET_GENERATOR_TYPE_PASSWORDLESS_INIT_CODE = 5;
  SECRET_GENERATOR_TYPE_APP_SECRET = 6;
}

message SMTPConfig {
  zitadel.v1.ObjectDetails details = 1;
  string sender_address = 2;
  string sender_name = 3;
  bool tls = 4;
  string host = 5;
  string user = 6;
}

message SMSProvider {
  zitadel.v1.ObjectDetails details = 1;
  string id = 2;
  SMSProviderConfigState state = 3;

  oneof config {
    TwilioConfig twilio = 4;
  }
}

message TwilioConfig {
  string sid = 1;
  string sender_number = 2;
}

enum SMSProviderConfigState {
  SMS_PROVIDER_CONFIG_STATE_UNSPECIFIED = 0;
  SMS_PROVIDER_CONFIG_ACTIVE = 1;
  SMS_PROVIDER_CONFIG_INACTIVE = 2;
}

message DebugNotificationProvider {
    zitadel.v1.ObjectDetails details = 1;
    bool compact = 2;
}

message OIDCSettings {
  zitadel.v1.ObjectDetails details = 1;
  google.protobuf.Duration  access_token_lifetime = 2;
  google.protobuf.Duration  id_token_lifetime = 3;
  google.protobuf.Duration  refresh_token_idle_expiration = 4;
  google.protobuf.Duration  refresh_token_expiration = 5;
}
